[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HotkeyItem.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[node name="HotkeyItem" type="Control"]
margin_right = -424.0
margin_bottom = -770.0
rect_min_size = Vector2( 600, 50 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 50 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )

[node name="GridContainer" type="GridContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 3
columns = 5

[node name="HotkeyName" type="Label" parent="Panel/GridContainer"]
margin_right = 170.0
margin_bottom = 50.0
rect_min_size = Vector2( 170, 0 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Hotkey"
align = 1
valign = 1

[node name="visual_spacer" type="ColorRect" parent="Panel/GridContainer"]
margin_left = 174.0
margin_right = 184.0
margin_bottom = 50.0
rect_min_size = Vector2( 10, 0 )
color = Color( 0.913725, 0.913725, 0.913725, 0.494118 )

[node name="visual_spacer2" type="ColorRect" parent="Panel/GridContainer"]
margin_left = 188.0
margin_right = 198.0
margin_bottom = 50.0
rect_min_size = Vector2( 10, 0 )
color = Color( 0.913725, 0.913725, 0.913725, 0 )

[node name="HotkeyKeys" type="Label" parent="Panel/GridContainer"]
margin_left = 202.0
margin_right = 399.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Keys"
valign = 1

[node name="ButtonSetKeys" type="Button" parent="Panel/GridContainer"]
margin_left = 403.0
margin_right = 600.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Set Keys"

[connection signal="gui_input" from="Panel/GridContainer" to="." method="_on_GridContainer_gui_input"]
[connection signal="mouse_entered" from="Panel/GridContainer" to="." method="_on_GridContainer_mouse_entered"]
[connection signal="mouse_exited" from="Panel/GridContainer" to="." method="_on_GridContainer_mouse_exited"]
